# CrouchKickFix

./: Cargo.toml  README.md  manifest.json
.github/workflows/: build-dll.yml
crates/crouchkick-core/: Cargo.toml
crates/crouchkick-core/src/: lib.rs
crates/crouchkick-plugin/: Cargo.toml
crates/crouchkick-plugin/src/: lib.rs
mods/FromWau.CrouchKickFix/: mod.json
mods/FromWau.CrouchKickFix/mod/scripts/vscripts/: ckf_settings.nut  init_crouchkick.nut
